<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignIn_A"
    android:background="@color/bluebackgroundLight">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:id="@+id/scrollView"
        android:clickable="true"
        android:layout_alignParentTop="true">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">



            <TextView
                android:id="@+id/error_mail"
                android:textColor="@color/error_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/mail"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/signIn_hint_mail"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/error_username"
                android:textColor="@color/error_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:visibility="gone"
                 />

            <EditText
                android:id="@+id/username"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textWebEmailAddress"
                android:hint="@string/signIn_hint_username"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/error_password"
                android:textColor="@color/error_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/password"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/signIn_hint_password"
                android:inputType="textVisiblePassword"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textIsSelectable="false"/>

            <TextView
                android:id="@+id/error_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/signIn_TextView_Age"
                android:visibility="visible"/>
            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/signIn_hint_birth_year"
                android:inputType="number"
                style="@style/App_EditTextStyle"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textIsSelectable="false"
                />

            <TextView
                android:id="@+id/error_radioSex"
                android:textColor="@color/error_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:visibility="gone"/>

            <RadioGroup
                android:id="@+id/radioSexGrp"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"

                >
                <RadioButton
                    android:id="@+id/radioM"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_weight="1"
                    android:textSize="20sp"

                    android:textStyle="bold"
                    android:text="@string/signIn_rb_male"
                    android:onClick="hideKeyboard"
                    android:textColor="@color/bluePolice" />
                <RadioButton
                    android:id="@+id/radioF"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/signIn_rb_female"
                    android:onClick="hideKeyboard"
                    android:textColor="@color/bluePolice" />
            </RadioGroup>


            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="#FFFFFF"
                    android:textColor="@color/bluePolice"
                    android:text="@string/signIn_button_signUp"
                    android:id="@+id/signup"
                    android:onClick="submitForm"
                    />



        </TableLayout>
    </ScrollView>


</RelativeLayout>
